# sandcastle

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  EXPERIMENTS.md  LICENSE-APACHE  Makefile  README.md  docker-compose.yml  research.json
.github/workflows/: publish-sdk.yml  release.yml
autoresearch/: results.tsv
benches/: sandbox.rs
crates/sandcastle/: Cargo.toml
crates/sandcastle-cli/: Cargo.toml  build.rs
crates/sandcastle-cli/src/: main.rs  serve.rs
crates/sandcastle-macros/: Cargo.toml
crates/sandcastle-macros/src/: lib.rs
crates/sandcastle/benches/: sandbox.rs
crates/sandcastle/experiments/: main.rs
crates/sandcastle/src/: capability.rs  error.rs  lib.rs  limits.rs  namespace.rs  pool.rs  registry.rs  runtime.rs  sandbox.rs  transcript.rs  types.rs
crates/sandcastle/src/capabilities/: http.rs  kv.rs  mod.rs  persistent_kv.rs
crates/sandcastle/tests/: edge_cases.rs  http_capability.rs  integration.rs
docs/: architecture.md  cli.md  quickstart-typescript.md  rust.md  troubleshooting.md
examples/: data_transform.js  hello.js  host_api.js
guest/: Cargo.toml  build.sh
guest/src/: lib.rs
sdk/typescript/: README.md  bench.mjs  biome.json  package-lock.json  package.json  research.json  tsconfig.build.json  tsconfig.json
sdk/typescript/proto/: sandcastle.proto
sdk/typescript/scripts/: postinstall.cjs  postinstall.js
sdk/typescript/src/: client.ts  index.ts  middleware.ts  singleton.ts
sdk/typescript/src/codemode/: create-code-tool.ts  executor.ts  index.ts  normalize.ts  types-gen.ts  types.ts
sdk/typescript/src/core/: bun-worker.ts  diagnostics.ts  errors.ts  http.ts  subprocess.ts  v8.ts
sdk/typescript/src/guest/: index.d.ts
sdk/typescript/src/types/: config.ts  execution.ts  namespace.ts
sdk/typescript/test/: agent-realworld.test.ts  agent-scenarios.test.ts  agent.test.ts  client.test.ts  codemode-50-experiments.test.ts  codemode-agent.test.ts  codemode-edge-experiments.test.ts  codemode-experiments.test.ts  codemode-final-20.test.ts  codemode.test.ts  concurrency-stress.test.ts  edge-cases.test.ts  errors.test.ts  package-ux.test.ts  prd-claims.test.ts  subprocess.test.ts  test-paths.ts  types.test.ts
tests/: cli_integration.sh
