[workspace]
resolver = "2"
members = [
    "crates/sandcastle",
    "crates/sandcastle-cli",
    "crates/sandcastle-macros",
]
exclude = ["guest"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/sandcastle-runtime/sandcastle"

[workspace.dependencies]
sandcastle = { path = "crates/sandcastle" }
sandcastle-macros = { path = "crates/sandcastle-macros" }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }
wasmtime = "43"
wasmtime-wasi = "43"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"

[workspace.lints.rust]
future-incompatible = "warn"
nonstandard_style = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -2 }
redundant_clone = "deny"
large_enum_variant = "warn"
needless_collect = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true
