[package]
name = "sandcastle-guest-js"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
rquickjs = { version = "0.9", features = ["bindgen", "loader", "allocator"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
