[package]
name = "sandcastle-cli"
description = "CLI for the SandCastle sandbox runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sandcastle"
path = "src/main.rs"

[dependencies]
sandcastle = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
notify = "7"
async-trait = { workspace = true }
