[package]
name = "sandcastle-macros"
description = "Proc macros for the SandCastle sandbox runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[lints]
workspace = true
